database/database_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
          tier: backend
          project: devops-intelligence
