database/database_service.yaml
apiVersion: v1
kind: Service
metadata:
        name: database
        namespace: database
        labels:
                tier: backend
spec:
        selector:
                tier: backend
        ports:
                - port: 5432
                  targetPort: 5432
