database/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
        name: redmine-network-policy
        namespace: database
spec:
        podSelector:
                matchLabels:
                        tier: frontend
        policyTypes:
                - Ingress
        ingress:
                - from:
                        - namespaceSelector:
                                matchLabels:
                                        tier: frontend
                                        project: devops-intelligence
                          podSelector:
                                matchLabels:
                                        tier: frontend
                  ports:
                        - port: 5432
